# agent-framework

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  QUALITY.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
agent_framework/: __init__.py  agent.py  memory.py  patterns.py  tools.py
docs/: ARCHITECTURE.md  TECHNICAL_ARTICLE.md
examples/: no_api_key_agent.py
scripts/: benchmark.py
tests/: __init__.py  test_agent.py  test_memory.py  test_patterns.py  test_tools.py
